// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> should render a board tile with nothing 1`] = `
<styled.div
  hasHoverLabel={false}
  isButton={false}
  isHoverable={true}
  tabIndex={0}
  tileSize="medium"
  type="default"
/>
`;

exports[`<Tile /> should render a hoverable board tile button in hollow style with hover label 1`] = `
<styled.div
  hasHoverLabel={false}
  isButton={true}
  isHoverable={true}
  tabIndex={0}
  tileSize="medium"
  type="hollow"
/>
`;

exports[`<Tile /> should render a hoverable board tile button with hover label 1`] = `
<styled.div
  hasHoverLabel={false}
  isButton={true}
  isHoverable={true}
  tabIndex={0}
  tileSize="medium"
  type="default"
/>
`;

exports[`<Tile /> should render a hoverable board tile with hover label 1`] = `
<styled.div
  hasHoverLabel={true}
  isButton={false}
  isHoverable={true}
  tabIndex={0}
  tileSize="medium"
  type="default"
>
  <styled.label>
    hover label
  </styled.label>
</styled.div>
`;

exports[`<Tile /> should render a large board tile 1`] = `
<styled.div
  hasHoverLabel={false}
  isButton={false}
  isHoverable={true}
  tabIndex={0}
  tileSize="large"
  type="default"
/>
`;

exports[`<Tile /> should render a medium board tile 1`] = `
<styled.div
  hasHoverLabel={false}
  isButton={false}
  isHoverable={true}
  tabIndex={0}
  tileSize="medium"
  type="default"
/>
`;

exports[`<Tile /> should render a non-hoverable board tile 1`] = `
<styled.div
  hasHoverLabel={false}
  isButton={false}
  isHoverable={false}
  tabIndex={0}
  tileSize="medium"
  type="default"
/>
`;

exports[`<Tile /> should render a small board tile 1`] = `
<styled.div
  hasHoverLabel={false}
  isButton={false}
  isHoverable={true}
  tabIndex={0}
  tileSize="small"
  type="default"
/>
`;

exports[`<Tile /> should render an anchor board tile 1`] = `
<Styled(UnstyledLink)
  hasHoverLabel={false}
  href="#dummy"
  isButton={false}
  isHoverable={true}
  tabIndex={0}
  tileSize="medium"
  type="default"
/>
`;
